# gasp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/gasp-cli/: Cargo.toml
crates/gasp-cli/src/: live.rs  main.rs  style.rs  table.rs
crates/gasp-cli/tests/: end_to_end.rs
crates/gasp-core/: Cargo.toml
crates/gasp-core/src/: context.rs  edit.rs  error.rs  freeze.rs  lib.rs  lock.rs  manifest.rs  manifest_init.rs  status.rs  sync.rs  url.rs  workspace.rs
crates/gasp-core/src/git/: local.rs  mod.rs  remote.rs
crates/gasp-core/templates/: context.md.j2  manifest_readme.md.j2  preamble.md.j2  workspace.toml.j2
docs/: design-questions.md  implementation-plan.md
