[package]
name = "gasp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "gasp"
path = "src/main.rs"

[dependencies]
gasp-core = { path = "../gasp-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"
indicatif = "0.17"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
fs2 = "0.4"
