[package]
name = "gasp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
