[package]
name = "gasp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
thiserror = "1"
git2 = { version = "0.18", default-features = false }
fs2 = "0.4"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
